--- a/.github/workflows/release-to-discord.yml
+++ b/.github/workflows/release-to-discord.yml
@@ -14,7 +14,7 @@ jobs:
       uses: SethCohen/github-releases-to-discord@v1.13.1
       with:
         webhook_url: https://discord.com/api/webhooks/1012539231815602217/mjQdYOuy3-jrbtKYoV3RONVtSVmORAbdxlWRcKfflCjcjSEGaB-y_4lv57pVOAWfbZSe
-        # color: "50762E"
+        color: "50762E"
         username: "Spanky the ElfBot"
         avatar_url: "https://github.com/spanky-the-elfbot.png"
         # content: "Hey <@&1119634168314343505>, got some new treetz for you!"
