--- a/.github/workflows/release-to-discord.yml
+++ b/.github/workflows/release-to-discord.yml
@@ -11,17 +11,16 @@ jobs:
     steps:
 
     - name: Github Releases To Discord
-      uses: SethCohen/github-releases-to-discord@v1.15.0
+      uses: SethCohen/github-releases-to-discord@v1.13.1
       with:
         webhook_url: https://discord.com/api/webhooks/1012539231815602217/mjQdYOuy3-jrbtKYoV3RONVtSVmORAbdxlWRcKfflCjcjSEGaB-y_4lv57pVOAWfbZSe
         color: "5273134"
         username: "Spanky the ElfBot"
         avatar_url: "https://github.com/spanky-the-elfbot.png"
         content: |
-           Hey dudes, got some new treetz for you!
-
-           I'm a multi-liner
-
-        footer_title: "So this is what's up..."
+           <@&1119634168314343505>, it's maintenance time!
+           
+           Here's what's new in this rollout. If your particular apps are affected, you can expect them to restart briefly within the next hour...
+        footer_title: "App hosting that works like magic! 🪄"
         footer_icon_url: "https://github.com/elfhosted.png"
         footer_timestamp: true                
