--- a/.github/workflows/release-to-discord.yml
+++ b/.github/workflows/release-to-discord.yml
@@ -17,10 +17,7 @@ jobs:
         color: "5273134"
         username: "Spanky the ElfBot"
         avatar_url: "https://github.com/spanky-the-elfbot.png"
-        content: |
-           <@&1119634168314343505>, it's maintenance time!
-           
-           Here's what's new in this rollout. If your particular apps are affected, you can expect them to restart briefly within the next hour...
-        footer_title: "App hosting that works like magic! 🪄"
+        content: <@&1119634168314343505>, it's rollout time! Here's what's new...
+        footer_title: "If your particular apps are affected, you can expect them to restart briefly within the next hour"
         footer_icon_url: "https://github.com/elfhosted.png"
         footer_timestamp: true                
